--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -28,7 +28,7 @@
 		</div>
 		<br>
 		<div class="textfield container-fluid">
-			<p>Your next move:</p><br>
+			<p>Your next move:</p>
 			
 			<div class="col-xs-6">
 				Piece:<br>
