--- a/app/views/rules_advisor.scala.html
+++ b/app/views/rules_advisor.scala.html
@@ -1,14 +1,12 @@
-<div id="advisor">
-		<img src="@routes.Assets.at("/images/ba.png")" alt='Advisor'>
-		<img src="@routes.Assets.at("/images/ra.png")" alt='Advisor'>
-		<br>
-		<text>Advisors (also known as guards or ministers, and less
-		commonly as assistants, mandarins, or warriors) are labelled 士 About
-		this sound shì ("scholar", "gentleman", "officer") for Black and 仕
-		About this sound shì ("scholar", "official") for Red. Rarely, sets use
-		the character 士 for both colors. The advisors start on either side of
-		the general. They move and capture one point diagonally and may not
-		leave the palace, which confines them to five points on the board. The
-		advisor is probably derived from the mantri in chaturanga, like the
-		queen in Western chess.</text>
-	</div>
+<div class="toCenter" id="advisor">
+	<img src="@routes.Assets.at("/images/ba.png")" alt='Advisor'>
+	<img src="@routes.Assets.at("/images/ra.png")" alt='Advisor'>
+	<br>
+	<br>
+	<text>The advisors (also known as guards or ministers, and less
+	commonly as assistants, mandarins, or warriors) start on either side of
+	the general. They move and capture one point diagonally and may not
+	leave the palace, which confines them to five points on the board. The
+	advisor is probably derived from the mantri in chaturanga, like the
+	queen in Western chess.</text>
+</div>
