--- a/app/views/rules_chariot.scala.html
+++ b/app/views/rules_chariot.scala.html
@@ -1,17 +1,14 @@
-<div id="chariot">
+<div class="toCenter" id="chariot">
 	<img src="@routes.Assets.at("/images/br.png")" alt='Chariot'>
 	<img src="@routes.Assets.at("/images/rr.png")" alt='Chariot'>
 	<br>
-	<text>Chariots are labelled 車 for Black and 俥 for Red in sets
-	marked with Traditional Chinese characters and 车 for both Black and Red
-	in sets marked with Simplified Chinese characters. Some traditional
-	sets use 車 for both colors. All of these characters are pronounced as
-	About this sound jū. The chariot moves and captures any distance
+	<br>
+	<text>The chariot moves and captures any distance
 	orthogonally, but may not jump over intervening pieces. The chariots
 	begin the game on the points at the corners of the board. The chariot
 	is often considered to be the strongest piece in the game due to its
 	freedom of movement and lack of restrictions. The chariot is sometimes
 	known as the rook by English-speaking players, since it is like the
 	rook in Western chess. Chinese players (and others) often call this
-	piece a car, since that is one modern meaning of the character 車.</text>
+	piece a car, since that is one modern meaning of the character.</text>
 </div>
