--- a/app/views/rules_horse.scala.html
+++ b/app/views/rules_horse.scala.html
@@ -1,21 +1,16 @@
-<div id="horse">
-		<img src="@routes.Assets.at("/images/bh.png")" alt='Horse'>
-		<img src="@routes.Assets.at("/images/rh.png")" alt='Horse'>
-		<br>
-		<text>Horses are labelled 馬 About this sound mǎ for Black and 傌
-		About this sound mà for Red in sets marked with Traditional Chinese
-		characters and 马 mǎ for both Black and Red in sets marked with
-		Simplified Chinese characters. Some traditional sets use 馬 for both
-		colors. Horses begin the game next to the elephants, on their outside
-		flanks. A horse moves and captures one point orthogonally and then one
-		point diagonally away from its former position, a move which is
-		traditionally described as being like the character 日 Rì. The horse
-		does not jump as the knight does in Western chess, and can be blocked
-		by a piece located one point horizontally or vertically adjacent to
-		it. Blocking a horse is called "hobbling the horse's leg" (蹩馬腿). The
-		diagram on the left illustrates the horse's movement. Since horses can
-		be blocked, it is sometimes possible to trap the opponent's horse. It
-		is possible for one player's horse to have an asymmetric attack
-		advantage if an opponent's horse is blocked, as seen in the diagram on
-		the right.</text>
-	</div>
+<div class="toCenter" id="horse">
+	<img src="@routes.Assets.at("/images/bh.png")" alt='Horse'>
+	<img src="@routes.Assets.at("/images/rh.png")" alt='Horse'>
+	<br>
+	<br>
+	<text>Horses begin the game next to the elephants, on their outside
+	flanks. A horse moves and captures one point orthogonally and then one
+	point diagonally away from its former position, a move which is
+	traditionally described as being like the character "Rì". The horse
+	does not jump as the knight does in Western chess, and can be blocked
+	by a piece located one point horizontally or vertically adjacent to
+	it. Blocking a horse is called "hobbling the horse's leg". Since horses can
+	be blocked, it is sometimes possible to trap the opponent's horse. It
+	is possible for one player's horse to have an asymmetric attack
+	advantage if an opponent's horse is blocked.</text>
+</div>
