--- a/app/views/rules_soldier.scala.html
+++ b/app/views/rules_soldier.scala.html
@@ -1,10 +1,9 @@
-<div id="soldier">
+<div class="toCenter" id="soldier">
 	<img src="@routes.Assets.at("/images/bs.png")" alt='Soldier'>
 	<img src="@routes.Assets.at("/images/rs.png")" alt='Soldier'>
 	<br>
-	<text>Each side has five soldiers, labelled 卒 About this sound
-	zú ("pawn" or "private") for Black and 兵 About this sound bīng
-	("soldier") for Red. Soldiers begin the game located on every other
+	<br>
+	<text>Each side has five soldiers. Soldiers begin the game located on every other
 	point one row back from the edge of the river. They move and capture by
 	advancing one point. Once they have crossed the river, they may also
 	move and capture one point horizontally. Soldiers cannot move backward,
