--- a/app/views/welcome.scala.html
+++ b/app/views/welcome.scala.html
@@ -6,6 +6,6 @@
 	</div>
 	<script>$("#startButton").click(function(){
 		$("#dynamicallyLoadableContent").load("playGame" + " #dynamicallyLoadableContent");
-		$('#tohide').show();
+		$('#isHidden').show();
 	})</script>
 }
