--- a/app/views/rules_general.scala.html
+++ b/app/views/rules_general.scala.html
@@ -1,19 +1,16 @@
-<div id="general">
+<div class="toCenter" id="general">
 	<img src="@routes.Assets.at("/images/ba.png")" alt='General'>
 	<img src="@routes.Assets.at("/images/ra.png")" alt='General'>
 	<br>
-	<text>Generals are labelled with the Chinese character 將 (trad.)
-	/ 将 (simp.) About this sound jiàng ("general") on the black side and 帥
-	(trad.) / 帅 (simp.) About this sound shuài ("marshal") on the red side.
-
-	The general starts the game at the midpoint of the back edge, within
+	<br>
+	<text>The general starts the game at the midpoint of the back edge, within
 	the palace. The general may move and capture one point orthogonally.
 	The two generals may not face each other in the same file with no
-	intervening pieces. If that happens, the 飛將 ("flying general") move may
+	intervening pieces. If that happens, the "flying general" move may
 	be executed, in which one general may cross the board to capture the
 	enemy general. In practice, this rule is only used to enforce
 	checkmate. The general may not leave the palace except when executing
-	the flying general move.[5] The Indian name king for this piece was
+	the flying general move. The Indian name king for this piece was
 	changed to general because China's rulers objected to their royal
 	titles being given to game pieces.</text>
 </div>
