--- a/public/stylesheets/cssstyle.css
+++ b/public/stylesheets/cssstyle.css
@@ -1,21 +1,16 @@
 /* @CHARSET "ISO-8859-1"; */
+
 @font-face {
 	font-family: 'chinese';
 	src: url("../fonts/CHINESETAKEAWAY.ttf"); Safari, Android, iOS
 }
 
-@font-face {
-	font-family: 'gang';
-	src: url("../fonts/go3v2.ttf"); Safari, Android, iOS
-}
-
 body {
 	color: black;
-	background-image: url("../images/chinawallbackround.jpg");
+	background-image: url("../images/chinawallbackground.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	font-family: 'chinese';
-	/*text-transform: uppercase; */
 	font-size: 22px;
 }
 
@@ -24,13 +19,8 @@ body {
 	background-color: rgba(236, 236, 236, 0.6);
 	padding-top: 15px;
 	padding-bottom: 15px;
-	border: 1px solid #4C1A1A;
+	border: 1px solid black;
 	border-radius: 25px;
-	
-}
-
-.CenterThis {
-	margin-left: 25%;
 }
 
 .h1 {
@@ -54,13 +44,17 @@ body {
 	color: black;
 	height: auto;
 	background-color: rgba(236, 236, 236, 0.6);
-	border: 1px solid #4C1A1A;
+	border: 1px solid black;
 	border-radius: 25px;
 }
 
-.textfieldWithoutBackground {
-	height: auto;
-	border: 5px solid black;
+.chat-textfield {
+	overflow: auto;
+	height:100px;
+}
+
+input.socket-input {
+	width: 100%;
 }
 
 input.nextMove {
@@ -72,6 +66,10 @@ input.nextMove {
 	font-size: inherit;
 }
 
+.li-btn {
+	width: 100%;
+}
+
 .myContent {
 	padding: 10px;
 	margin-left: 10%;
@@ -79,7 +77,7 @@ input.nextMove {
 }
 
 .myNavBar {
-	background-color: rgba(158, 204, 255, 0.8);
+	background-color: rgba(158, 204, 255, 0.7);
 }
 
 .navbar-inverse {
@@ -96,13 +94,9 @@ input.nextMove {
 	text-align: center;
 }
 
-.ourElement {
-	width: 50%;
-}
-
 .redcircle {
 	width: 60px;
-	background-color: red;
+	background-color: rgba(255, 0, 0, 0.6);
 	border-radius: 100%;
 	border: 5px solid black;
 	height: 60px;
@@ -111,11 +105,16 @@ input.nextMove {
 
 .blackcircle {
 	width: 60px;
-	background-color: black;
+	background-color: rgba(0, 0, 0, 0.6);
 	border-radius: 100%;
 	border: 5px solid white;
 	height: 60px;
 	display: inline-block;
+}
+
+.footer-modal {
+	font-size:16px;
+	float:left;
 }
 
 @media ( max-width : 1200px) {
