--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -50,7 +50,8 @@
 						target="_blank">Xiangqi->Wiki</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
+					<li><a href="#"><span class="glyphicon glyphicon-log-in"></span>
+							Login</a></li>
 				</ul>
 			</div>
 		</div>
