--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,12 +5,12 @@
 <head>
 <title>@title</title>
 	<link rel='shortcut icon' type='image/png' href='@routes.Assets.at("images/favicon.png")'>
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script type="text/javascript" src='@routes.Assets.at("javascripts/functions.js")'></script>
 	<script type="text/javascript" charset="utf-8" src="@routes.Application.wsJs()"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<link rel='stylesheet' type="text/css" href='@routes.Assets.at("stylesheets/cssstyle.css")'>
 </head>
 <body>
