fixed not showing images of pieces in rule modular

--- a/app/views/rules_advisor.scala.html
+++ b/app/views/rules_advisor.scala.html
@@ -1,6 +1,6 @@
 <div class="toCenter" id="advisor">
-	<img src="@routes.Assets.at("/images/ba.png")" alt='Advisor'>
-	<img src="@routes.Assets.at("/images/ra.png")" alt='Advisor'>
+	<img src="@routes.Assets.at("images/ba.png")" alt='Advisor'>
+	<img src="@routes.Assets.at("images/ra.png")" alt='Advisor'>
 	<br>
 	<br>
 	<text>The advisors (also known as guards or ministers, and less
