--- a/app/views/rules_cannon.scala.html
+++ b/app/views/rules_cannon.scala.html
@@ -1,6 +1,6 @@
 <div class="toCenter" id="cannon">
-	<img src="@routes.Assets.at("/images/bc.png")" alt='Cannon'>
-	<img src="@routes.Assets.at("/images/rc.png")" alt='Cannon'>
+	<img src="@routes.Assets.at("images/bc.png")" alt='Cannon'>
+	<img src="@routes.Assets.at("images/rc.png")" alt='Cannon'>
 	<br>
 	<br>
 	<text>Each player has two cannons,
