--- a/app/views/rules_chariot.scala.html
+++ b/app/views/rules_chariot.scala.html
@@ -1,6 +1,6 @@
 <div class="toCenter" id="chariot">
-	<img src="@routes.Assets.at("/images/br.png")" alt='Chariot'>
-	<img src="@routes.Assets.at("/images/rr.png")" alt='Chariot'>
+	<img src="@routes.Assets.at("images/br.png")" alt='Chariot'>
+	<img src="@routes.Assets.at("images/rr.png")" alt='Chariot'>
 	<br>
 	<br>
 	<text>The chariot moves and captures any distance
