--- a/app/views/rules_elephant.scala.html
+++ b/app/views/rules_elephant.scala.html
@@ -1,6 +1,6 @@
 <div class="toCenter" id="elephant">
-	<img src="@routes.Assets.at("/images/be.png")" alt='Elephant'>
-	<img src="@routes.Assets.at("/images/re.png")" alt='Elephant'>
+	<img src="@routes.Assets.at("images/be.png")" alt='Elephant'>
+	<img src="@routes.Assets.at("images/re.png")" alt='Elephant'>
 	<br>
 	<br>
 	<text>Elephants are located next to the advisors.
