--- a/app/views/rules_general.scala.html
+++ b/app/views/rules_general.scala.html
@@ -1,6 +1,6 @@
 <div class="toCenter" id="general">
-	<img src="@routes.Assets.at("/images/ba.png")" alt='General'>
-	<img src="@routes.Assets.at("/images/ra.png")" alt='General'>
+	<img src="@routes.Assets.at("images/ba.png")" alt='General'>
+	<img src="@routes.Assets.at("images/ra.png")" alt='General'>
 	<br>
 	<br>
 	<text>The general starts the game at the midpoint of the back edge, within
