--- a/app/views/rules_soldier.scala.html
+++ b/app/views/rules_soldier.scala.html
@@ -1,6 +1,6 @@
 <div class="toCenter" id="soldier">
-	<img src="@routes.Assets.at("/images/bs.png")" alt='Soldier'>
-	<img src="@routes.Assets.at("/images/rs.png")" alt='Soldier'>
+	<img src="@routes.Assets.at("images/bs.png")" alt='Soldier'>
+	<img src="@routes.Assets.at("images/rs.png")" alt='Soldier'>
 	<br>
 	<br>
 	<text>Each side has five soldiers. Soldiers begin the game located on every other
