--- a/app/views/rules_horse.scala.html
+++ b/app/views/rules_horse.scala.html
@@ -1,6 +1,6 @@
 <div class="toCenter" id="horse">
-	<img src="@routes.Assets.at("/images/bh.png")" alt='Horse'>
-	<img src="@routes.Assets.at("/images/rh.png")" alt='Horse'>
+	<img src="@routes.Assets.at("images/bh.png")" alt='Horse'>
+	<img src="@routes.Assets.at("images/rh.png")" alt='Horse'>
 	<br>
 	<br>
 	<text>Horses begin the game next to the elephants, on their outside
