totally awesome stable

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -61,7 +61,7 @@
 	</div>
 
 	<div class="container-fluid" id="isHidden">
-		<div class="textfield col-xs-12 col-sm-4 col-sm-offset-4 col-lg-6 col-lg-offset-3 toCenter">
+		<div class="textfield col-xs-12 col-sm-4 col-sm-offset-4 col-lg-6 col-lg-offset-3">
 			<p>Xiangqi Chat</p>
 			<input class="socket-input" type="text" id="socket-input">
 			<div class="chat-textfield" id="socket-messages"></div>
