maybe not so stable at all

--- a/app/views/welcome.scala.html
+++ b/app/views/welcome.scala.html
@@ -4,7 +4,7 @@
 
 	<div class="row">
 		<div class="col-xs-6 col-xs-offset-3 textfield toCenter">
-			<h1>Welcome @name to  Xiangqi</h1>
+            <h1>Welcome <p style="font-family:verdana">@name</p> to  Xiangqi</h1>
 			<button class="btn" type="button" id="startButton" style="border: 1px solid black; margin-bottom: 1%;">Play!</button>
 		</div>
 	</div>
