style chat input

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -58,9 +58,9 @@
 	</div>
 
 	<div class="container-fluid" id="isHidden">
-		<div class="textfield col-xs-12 col-sm-4 col-sm-offset-4 col-lg-6 col-lg-offset-3">
+		<div class="textfield col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-4 col-lg-6 col-lg-offset-3">
 			<p class="toCenter">Xiangqi Chat</p>
-			<input class="socket-input toCenter" type="text" id="socket-input">
+			<input class="socket-input" type="text" id="socket-input">
 			<div class="chat-textfield" id="socket-messages" style="font-family:verdana"></div>
 		</div>
 	</div>
