--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(list: ArrayList[ArrayList[String]])(message: String)(turn: Int)(playerID: Int)
+@(list: ArrayList[ArrayList[String]])(message: String)(turn: Int)(pcolor: String)
 
 @main("Xiangqi - Chinese Chess") {
 	<div class="col-xs-12 col-md-6 board">
@@ -49,7 +49,7 @@
 			<div class="col-xs-6">
 				<p>You:</p>
 				<div id="playersTurn"></div>
-				@if(playerID==1){
+				@if(pcolor=='red'){
 					<div class="redcircle"></div>
 				} else {
 					<div class="blackcircle"></div>
