--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -49,7 +49,7 @@
 			<div class="col-xs-6">
 				<p>You:</p>
 				<div id="playersTurn"></div>
-				@if(pcolor=='red'){
+				@if(pcolor=="red"){
 					<div class="redcircle"></div>
 				} else {
 					<div class="blackcircle"></div>
