--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -19,7 +19,7 @@
 	</div>
 		
 	<section class="col-xs-12 col-md-6 toCenter">
-		<div class="textfield">
+		<div class="textfield bubble-transparent">
 			@if(message==null){
 				<p>Awaiting next move!</p>
 			} else {
@@ -27,7 +27,7 @@
 			}
 		</div>
 		<br>
-		<div class="textfield container-fluid">
+		<div class="textfield bubble-transparent container-fluid">
 			<p>Your next move:</p>
 			
 			<div class="col-xs-6">
@@ -45,7 +45,7 @@
 		</div>
 		<br>
 
-		<div class="textfield container-fluid">
+		<div class="textfield bubble-transparent container-fluid">
 			<div class="col-xs-6">
 				<p>You:</p>
 				<div id="playersTurn"></div>
