--- a/app/views/theEndYouWon.scala.html
+++ b/app/views/theEndYouWon.scala.html
@@ -2,7 +2,7 @@
 
 @main("The End") {
     <div class="row">        
-        <div class="col-xs-6 col-xs-offset-3 textfieldi toCenter"
+        <div class="col-xs-6 col-xs-offset-3 textfield bubble-transparent toCenter"
             <h1>Congratulations! You won the game!</h1>
         </div>
         
