--- a/app/views/welcome.scala.html
+++ b/app/views/welcome.scala.html
@@ -3,7 +3,7 @@
 @main("Xiangqi - Chinese Chess") {
 
 	<div class="row">
-		<div class="col-xs-6 col-xs-offset-3 textfield toCenter">
+		<div class="col-xs-6 col-xs-offset-3 textfield bubble-transparent toCenter">
             <h1>Welcome <p style="font-family:verdana">@name</p> to  Xiangqi</h1>
 			<button class="btn" type="button" id="startButton" style="border: 1px solid black; margin-bottom: 1%;">Play!</button>
 		</div>
@@ -11,7 +11,7 @@
 	<br>
 	
 	<div class="row">
-		<div class="col-xs-6 col-xs-offset-3 textfield toCenter">
+		<div class="col-xs-6 col-xs-offset-3 bubble-transparent  toCenter">
 			<div>
 		       <a href="@url"><img alt="Sign in with google" src="https://developers.google.com/accounts/images/sign-in-with-google.png" style="width:60%"></a>
 		    </div>
