--- a/app/views/theEndYouLost.scala.html
+++ b/app/views/theEndYouLost.scala.html
@@ -2,7 +2,7 @@
 
 @main("The End") {
     <div class="row">	
-        <div class="col-xs-6 col-xs-offset-3 textfield toCenter">
+        <div class="col-xs-6 col-xs-offset-3 textfield bubble-transparent toCenter">
             <h1>PFFFF!! You suck!</h1>
         </div>
         
