--- a/public/stylesheets/cssstyle.css
+++ b/public/stylesheets/cssstyle.css
@@ -15,12 +15,8 @@ body {
 }
 
 .board {
-	height: auto;
-	background-color: rgba(236, 236, 236, 0.6);
 	padding-top: 15px;
 	padding-bottom: 15px;
-	border: 1px solid black;
-	border-radius: 25px;
 }
 
 .h1 {
@@ -42,7 +38,10 @@ body {
 
 .textfield {
 	color: black;
-	height: auto;
+}
+
+.bubble-transparent {
+	height:auto;
 	background-color: rgba(236, 236, 236, 0.6);
 	border: 1px solid black;
 	border-radius: 25px;
