--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -66,7 +66,7 @@
 	</div>
 
 	<!-- Modal -->
-	<div class="modal fade" id="advisorModal" tabindex="-1" role="dialog"
+	<div class="modal fade" id="ruleModal" tabindex="-1" role="dialog"
 		aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
